# power-clipboard

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
docs/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard_monitor.rs  clipboard_stack.rs  commands.rs  main.rs  tray.rs
ui/overlay/: index.html  script.js  style.css
ui/settings/: index.html  script.js  style.css
